# academie-site

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  academie-prologin-openapi.yaml  nginx.conf  reverse-proxy.sh
back/: .gitignore  (+6 more)
backend/: .gitignore  .gitlab-ci.yml  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/activities/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/activities/migrations/: 0001_initial.py  0002_alter_activity_image.py  0003_alter_activity_image.py  0004_alter_activity_image.py  0005_alter_activity_image.py  0006_alter_activity_image.py  0007_alter_activity_image.py  0008_activity_difficulty.py  0009_remove_activity_publication_activity_published.py  0010_alter_activity_published.py  0011_alter_activity_author_alter_activity_title.py  0012_activity_authorized_classes.py
backend/authentification/: academies.py  admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/authentification/migrations/: 0001_initial.py  0002_class_student_prologinuser_is_student_and_more.py  0003_class_name.py  0004_class_temp_id_alter_class_students.py  0005_remove_class_id_alter_class_temp_id.py  0006_rename_temp_id_class_id.py  0007_class_class_id_alter_class_id.py  0008_alter_class_class_id.py
backend/evaluator/: celery.py  urls.py  wsgi.py
backend/evaluator/settings/: common.py  common_old.py  conf.sample.py  dev.py  settings.py  test.py
backend/misc/: swagger.py  views.py
backend/problems/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/problems/migrations/: 0001_initial.py  0002_problem_managers.py  0003_problem_published.py  0004_remove_problem_published.py  0005_alter_problem_author_alter_problem_title.py
backend/reset/: apps.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/status/: models.py  serializers.py  urls.py  views.py
backend/status/migrations/: 0001_initial.py
backend/submissions/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/submissions/migrations/: 0001_initial.py  0002_alter_problemsubmissioncode_language.py  0003_alter_problemsubmissioncode_language.py  0004_alter_problemsubmissioncode_language.py  0005_alter_problemsubmissioncode_language.py  0006_alter_problemsubmissioncode_language.py  0007_alter_problemsubmissioncode_language.py  (+15 more)
evaluator/: .gitignore  .pre-commit-config.yaml  pyproject.toml
evaluator/evaluator/: manage.py  update.py
(+161 files in other folders)
